--- a/CreativeTim.Argon.DotNetCore.Free/Views/Home/Mixer.cshtml
+++ b/CreativeTim.Argon.DotNetCore.Free/Views/Home/Mixer.cshtml
@@ -4,7 +4,7 @@
 @inject IOptions<ScriptTags> OptionsScriptTags
 
 @{
-    ViewData["Title"] = "Maps";
+    ViewData["Title"] = "Mixer";
 }
 
 @section HeadScripts
