--- a/CreativeTim.Argon.DotNetCore.Free/Views/Shared/_Sidebar.cshtml
+++ b/CreativeTim.Argon.DotNetCore.Free/Views/Shared/_Sidebar.cshtml
@@ -77,18 +77,18 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Icons")">
-                        <i class="ni ni-planet text-blue"></i> Icons
+                    <a class="nav-link" href="@Url.Action("Speaker")">
+                        <i class="ni ni-planet text-blue"></i> Speaker
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Maps")">
-                        <i class="ni ni-pin-3 text-orange"></i> Maps
+                    <a class="nav-link" href="@Url.Action("Mixer")">
+                        <i class="ni ni-pin-3 text-orange"></i> Mixer
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Tables")">
-                        <i class="ni ni-bullet-list-67 text-red"></i> Tables
+                    <a class="nav-link" href="@Url.Action("DMB")">
+                        <i class="ni ni-bullet-list-67 text-red"></i> DMB
                     </a>
                 </li>
                 <li class="nav-item">
